Adds auto-fetch to git config.

--- a/VSCode/settings.json
+++ b/VSCode/settings.json
@@ -25,6 +25,7 @@
   "prettier.jsonEnable": [],
   // Git
   "git.confirmSync": false,
+  "git.autofetch": true,
   // Todo highlight
   "todohighlight.keywordsPattern": "TODO|FIXME"
 }
